# mandrake

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  Dockerfile.build  Makefile  README.md
demo/: .gitignore  Makefile  demo.c  demo2.c  demo3.c
harness/: Makefile  harness  harness.c
src/: analyzed_value.rs  lib.rs  main.rs  mandrake.rs  mandrake_output.rs  syscalls.csv  syscalls.rs  visibility_configuration.rs
