[package]
name = "mandrake"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nix = "~0.20.0"
spawn-ptrace = "~0.1.2"
tempfile = "~3.2.0"
byteorder = "~1.4.3"
iced-x86 = "~1.11.3"
serde = { version = "~1.0.110", features = ["derive"] }
serde_json = "~1.0.53"
hex = "~0.4.2"
simple-error = "~0.2.1"
