[package]
name = "mandrake"
authors = ["Ron Bowes <ron@counterhack.com>"]
version = "0.1.1-beta"
edition = "2021"
description = "Mandrake is an open-source machine code analyzer / instrumenter"
homepage = "https://github.com/counterhack/mandrake"
repository = "https://github.com/counterhack/mandrake"
license = "mit"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nix = "~0.20.0"
spawn-ptrace = "~0.1.2"
tempfile = "~3.2.0"
byteorder = "~1.4.3"
iced-x86 = "~1.11.3"
hex = "~0.4.2"
simple-error = "~0.2.1"
clap = { version = "~3.0.6", features = ["derive"] }
clap-num = "~1.0.0"

# Serialize formats
serde = { version = "~1.0.110", features = ["derive"] }
serde_json = "~1.0.53"
serde_yaml = "~0.8.23"
serde-pickle = "~1.1.0"
base64 = "~0.12.3"

# Used to load syscall data
lazy_static = "~1.4.0"
csv = "~1.1.6"

# Used to read syscall file
regex = "~1.5.4"

[profile.release]
# strip = "debuginfo"
panic = 'abort'
lto = true
